# app-tidying

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  detect_stdout.sh  get_display_info.sh  get_window_info.applescript  get_window_info.sh  move_to_external_display.sh  open_new_window.sh  rustfmt.toml  test_stdout_detection.sh  verify_new_window_menu.sh  verify_spaces.sh  verify_stage_manager.sh  verify_stage_manager_detailed.sh
.claude/: settings.json
.claude/agents/: code-reviewer-jp.md  test-code-implementer.md
.claude/commands/: fix-github-issue.md
.claude/hooks/: rust_formatter.sh  rust_quality_checks.sh
.github/workflows/: ci.yml  release.yml
docs/: SETTINGS_GUIDE.md
resources/icons/: app_tidying.icns
src/: applescript.rs  cli.rs  config.rs  lib.rs  loader.rs  logger.rs  main.rs  saver.rs
src/applescript/: app.rs  display.rs  mod.rs  osascript.rs  utils.rs  window.rs
technical-verification/: README.md  get_display_info.sh  get_window_info.sh  move_to_external_display.sh  open_new_window.sh  verify_stage_manager.sh
tests/: applescript_test.rs  cli_test.rs  config_test.rs  integration_test.rs  loader_test.rs  loader_test_README.md  logger_test.rs  saver_test.rs  saver_test_README.md  system_window_detection_test.rs
